--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/CLGonzalezGroh/13reacthooks#readme",
   "dependencies": {
+    "@react-google-maps/api": "^1.13.0",
+    "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-paypal-button": "^4.1.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
